# practical_theory

./: .gitignore  CMakeLists.txt
cmake/: Benchmarking.cmake
cpu_cache/: README.md
cpu_cache/resources/: benchmark_graphs.xlsx  cpu-cache.drawio
cpu_cache/scripts/: process_benchmark_results.py
cpu_cache/src/: CMakeLists.txt  benchmark_binary_search.cpp  benchmark_linear_search.cpp  benchmark_random_memory_access.cpp  benchmark_set_search.cpp  benchmark_unordered_search.cpp
latex/: cpu_cache.tex
posts/: 2026-02-13-cpu-cache-and-data-structures.md
